Update Find Course Reviews.ipynb

--- a/Find Course Reviews.ipynb
+++ b/Find Course Reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "PATH = r'C:\\Users\\jsonn\\Documents\\Python\\selenium\\chromedriver.exe' #needed to put r to not get unicode error, this line is from that youtube tutorial\n",
+    "PATH = r'C:\\Program Files (x86)\\chromedriver.exe'\n",
+    "#PATH = r'C:\\Users\\jsonn\\Documents\\Python\\selenium\\chromedriver.exe' #needed to put r to not get unicode error, this line is from that youtube tutorial\n",
     "#the path is where I put the chromedriver app thingie\n",
     "grading_scale = {4.0:'A',\n",
     "                    3.7: 'A-',\n",
@@ -68,17 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "paste link: https://www.ratemyprofessors.com/ShowRatings.jsp?tid=1621181\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = input(\"paste link: \")\n",
     "driver = create_driver(headless=False)\n",
@@ -100,22 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Choose the kind of filter you want. If you want a specific class(es), enter course number(s) (i.e. CS61A) one at a time, and enter 'done' when complete. If you want to filter OUT a course(s), just press enter for now: data8\n",
-      "choose another course. Enter 'done' when complete: csc8\n",
-      "choose another course. Enter 'done' when complete: cs8\n",
-      "choose another course. Enter 'done' when complete: cs08\n",
-      "choose another course. Enter 'done' when complete: done\n",
-      "Execute next cell.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filter_type = input(\"Choose the kind of filter you want. If you want a specific class(es), enter course number(s) (i.e. CS61A) one at a time, and enter 'done' when complete. If you want to filter OUT a course(s), just press enter for now: \")\n",
     "if filter_type: #they need to put in the whole course name, and potentially other names that it might go by\n",
@@ -129,17 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Execute next cell.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "course_names = professor_soup.find_all(\"div\",\"RatingHeader__StyledClass-sc-1dlkqw1-2 hBbYdP\")\n",
     "names = [name.string for name in course_names][::2]\n",
@@ -157,20 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"just getting more data in this cell. Would like to get course grades, and would take again.\\nNeed to find out how to account for information that's not included to prevent inconsistency\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"just getting more data in this cell. Would like to get course grades, and would take again.\n",
     "Need to find out how to account for information that's not included to prevent inconsistency\"\"\"\n",
@@ -179,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -188,139 +149,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "DATA8\n",
-      "I took Data 8 with Denero and Wagner Fall 2017 and it is so clear how much effort they put into crafting a really interesting and well-designed class. Denero is charismatic and moves at a good pace in his lectures. He mostly taught the coding portion of the material and was very approachable when I asked questions in office hours. 5.0 3.0 \n",
-      "\n",
-      "CS61A\n",
-      "DATA8\n",
-      "Prof. DeNero is witty, knowledgable, and patient. He and the GSIs construct an inclusive, helpful environment for all students. There is no shortage of help (Piazza, office hours, lab), though you may have to wait during busy times, like right before a project is due. Try to take coding problems in stride. You learn best through trial and error! 5.0 4.0 \n",
-      "\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "DATA8\n",
-      "The myth, the man, and the legend. This guy somehow manages to simulate a semi-personal connection with each and every student in a class with several hundred students. The course (for the most part) was very well run, and I definitely enjoyed it. He and Adhikari both did an amazing job trying to make the material accessible for everyone. 4.0 2.0 \n",
-      "\n",
-      "61A\n",
-      "CS8\n",
-      "Professor DeNero is the man, I have never had a professor this good. 5.0 3.0 \n",
-      "\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61B\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS11\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS113\n",
-      "CS61A\n",
-      "CS011\n",
-      "CS61A\n",
-      "CS61A\n",
-      "Average rating under filters: 4.75 \n",
-      "Average difficulty under filters: 3.0\n",
-      "Max/min rating under filters: 5.0, 4.0 \n",
-      "Max/min difficulty under filters: 4.0, 2.0\n"
+     "ename": "NameError",
+     "evalue": "name 'filter_type' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-e50943575653>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0maverage_rating\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maverage_difficulty\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdifficulties_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#by course wanted for if filter_type true\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mfilter_type\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#because the other option was \"\" #some implicit booleanness\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreview\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrating\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdifficulty\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreviews\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdifficulties\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcourse\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcourse\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcourses_wanted\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filter_type' is not defined"
      ]
     }
    ],
@@ -370,18 +206,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(118, 118, 118, 118)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-323a49383d65>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreviews\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mratings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdifficulties\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'names' is not defined"
+     ]
     }
    ],
    "source": [
@@ -436,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
