Update Find Course Reviews.ipynb
avg_grade for if there were no grades in the filtered list

--- a/Find Course Reviews.ipynb
+++ b/Find Course Reviews.ipynb
@@ -176,11 +176,10 @@
     "\"\"\"get average grade\"\"\"\n",
     "def avg(grades):\n",
     "    glist = []\n",
-    "    avg_grade = 0\n",
     "    for grade in grades:\n",
     "        if grade in grading_scale.values() or grade == \"A+\":\n",
     "            glist.append(grade_to_number(grade))\n",
-    "    return average_grade(glist)\n"
+    "    return average_grade(glist) if glist else 0 #if there were no grades \n"
    ]
   },
   {
