--- a/Find Course Reviews.ipynb
+++ b/Find Course Reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "paste link: https://www.ratemyprofessors.com/ShowRatings.jsp?tid=1621181\n"
+      "paste link: https://www.ratemyprofessors.com/ShowRatings.jsp?tid=2369550\n"
      ]
     }
    ],
@@ -73,15 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose the kind of filter you want. If you want a specific class(es), enter course number(s) (i.e. CS61A) one at a time, and enter 'done' when complete. If you want to filter OUT a course(s), just press enter for now: DATA8\n",
-      "choose another course. Enter 'done' when complete: done\n",
+      "Choose the kind of filter you want. If you want a specific class(es), enter course number(s) (i.e. CS61A) one at a time, and enter 'done' when complete. If you want to filter OUT a course(s), just press enter for now: \n",
       "Execute next cell.\n"
      ]
     }
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -196,134 +195,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "DATA8\n",
-      "I took Data 8 with Denero and Wagner Fall 2017 and it is so clear how much effort they put into crafting a really interesting and well-designed class. Denero is charismatic and moves at a good pace in his lectures. He mostly taught the coding portion of the material and was very approachable when I asked questions in office hours. 5.0 3.0 \n",
+      "enter the course number(s) of the classes that you would NOT like to see. Press enter on blank when you're complete: \n",
+      "EECS127\n",
+      "Gireeja is one of the most caring professors I have met at Berkeley. However, she ought to prepare more for her lectures cause she does make quite a few mistakes that can be distracting and derail lecture for several minutes. I also wish she would be more transparent with her grading scheme. 3.0 3.0 \n",
       "\n",
-      "CS61A\n",
-      "DATA8\n",
-      "Prof. DeNero is witty, knowledgable, and patient. He and the GSIs construct an inclusive, helpful environment for all students. There is no shortage of help (Piazza, office hours, lab), though you may have to wait during busy times, like right before a project is due. Try to take coding problems in stride. You learn best through trial and error! 5.0 4.0 \n",
+      "EECS127\n",
+      "Crystal clear lectures, fair tests, the right amount of homework. Overall a great class and she does a great job of teaching it. 5.0 4.0 \n",
       "\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "DATA8\n",
-      "The myth, the man, and the legend. This guy somehow manages to simulate a semi-personal connection with each and every student in a class with several hundred students. The course (for the most part) was very well run, and I definitely enjoyed it. He and Adhikari both did an amazing job trying to make the material accessible for everyone. 4.0 2.0 \n",
+      "EE16A\n",
+      "Ranade is super eloquent, clear, and concise. She knows what she's talking about and is always ready to answer peoples questions. I think she's also encouraging. Sometimes lectures would get pretty boring, and I would recommend watching webcast if you prefer fast paced, as she speaks slowly (probably because this class is meant for freshmen). 5.0 4.0 \n",
       "\n",
-      "61A\n",
-      "CS8\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61B\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS11\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS61A\n",
-      "CS113\n",
-      "CS61A\n",
-      "CS011\n",
-      "CS61A\n",
-      "CS61A\n",
-      "Average rating under filters: 0.11965811965811966 \n",
-      "Average difficulty under filters: 0.07692307692307693\n",
-      "Max/min rating under filters: 5.0, 4.0 \n",
-      "Max/min difficulty under filters: 4.0, 2.0\n",
+      "EECS16A\n",
+      "Amazing and very clear lectures! Prof Ranade is willing to help us outside of the class. She makes ee16a clear and easy for understanding. 5.0 3.0 \n",
+      "\n",
+      "EE16A\n",
+      "Professor Ranade isn't the best lecturer (ironic, since she basically wrote the content of the course). Going in with no linear algebra or circuits experience was tough, but asking a TON of questions in discussion, reading supplemental texts and lecture notes, doing homework diligently, and going to office hours helped me succeed in this course. 3.0 4.0 \n",
+      "\n",
+      "EE16A\n",
+      "I learned more about linear algebra and circuits from the notes and the optional texts assigned for the course. Going to lecture is absolutely worthless and the homework is unnecessarily long. You can get perfect scores on all the homework assignments but it all comes down to your performance on tests which are quite lengthy. 2.0 4.0 \n",
+      "\n",
+      "EE16A\n",
+      "Lectures are clear, tests are fair, homework is difficult. There is clearly a lot of thought and preparation that goes into each assignment which is nice because they are not easy assignments. Very rarely feel like you're doing busywork. 5.0 4.0 \n",
+      "\n",
+      "EE16A\n",
+      "Most professors in college just regard teaching as job, but don't really care, while professor Ranade is one of the very few who actually cares about how students are doing and really want to make sure that her students are learn something. Perhaps a normal lecturer, but amazing teacher or educator. Remind me of my high school teachers. 5.0 3.0 \n",
+      "\n",
+      "EE16A\n",
+      "Disproportionate amount of work combined with her rushed teaching style makes it hard to learn. Theres hw due on Fridays, self-grades due on Tuesdays, 3 hour lab, and two discussion sections, repeating every week. If you have no prior knowledge of linear algebra, you'll have to spend extra time outside of lecture going over concepts. 3.0 4.0 \n",
+      "\n",
+      "EE16A\n",
+      "Not beginner-friendly, was difficult to understand her explanation of linear algebra 2.0 4.0 \n",
+      "\n",
+      "EE16A\n",
+      "Lecture is boring, dull, and confusing. She also doesn't let you take notes on a tablet/laptop which is annoying since I do that for all my other classes. Hard to understand her mathematical notation and intuition if you have no linear algebra prior experience. 2.0 5.0 \n",
+      "\n",
+      "EE16A\n",
+      "Great 4.0 3.0 \n",
+      "\n",
+      "Average rating under filters: 4.0 \n",
+      "Average difficulty under filters: 4.090909090909091\n",
+      "Max/min rating under filters: 5.0, 2.0 \n",
+      "Max/min difficulty under filters: 5.0, 3.0\n",
       "Average grade: A\n"
      ]
     }
@@ -386,6 +298,52 @@
     "except ZeroDivisionError:\n",
     "    pass\n",
     "print(\"Average grade: {}\".format(avg(grades_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "she\n",
+      "her\n",
+      "she\n",
+      "she\n",
+      "her\n",
+      "she\n",
+      "she\n",
+      "she\n",
+      "she\n",
+      "she\n",
+      "her\n",
+      "her\n",
+      "her\n",
+      "she\n",
+      "her\n",
+      "gender: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "gender = {0:0, 1:0 } #0 female, 1 male\n",
+    "she_series, he_series = ('she','her','hers'),(\"he\",\"him\",\"his\")\n",
+    "for review in [review.lower() for review in reviews]:\n",
+    "    for word in review.split():\n",
+    "        if word in she_series:\n",
+    "            #print(word)\n",
+    "            gender[0] +=1\n",
+    "        if word in he_series:\n",
+    "            #print(word)\n",
+    "            gender[1] +=1\n",
+    "if gender[0] == gender[1]:\n",
+    "    print(\"gender inconclusive\")\n",
+    "else:\n",
+    "    reverse = {val: key for key, val in gender.items()}\n",
+    "    print(\"gender: {}\".format(reverse[max(reverse.keys())]))\n"
    ]
   },
   {
