Finished getting professor names and urls from main page

--- a/Find Course Reviews.ipynb
+++ b/Find Course Reviews.ipynb
@@ -23,18 +23,14 @@
     "\n",
     "def create_driver(headless=True, implicit_wait=2):\n",
     "    \"\"\"\n",
+    "    # Firefox\n",
+    "    opts = webdriver.firefox.options.Options()\n",
+    "    opts.headless = headless\n",
+    "    #driver = webdriver.Firefox(options=opts)\n",
+    "    \"\"\"\n",
     "    opts = webdriver.chrome.options.Options()\n",
     "    opts.headless = headless\n",
-    "    driver = webdriver.Remote(\n",
-    "        command_executor='http://127.0.0.1:3928/wd/hub',\n",
-    "        desired_capabilities=DesiredCapabilities.CHROME, \n",
-    "        options=opts)\n",
-    "    driver.implicitly_wait(2)\n",
-    "    \"\"\"\n",
-    "    opts = webdriver.chrome.options.Options()# changed from firefox to chrome \n",
-    "    opts.headless = headless\n",
-    "    #driver = webdriver.Chrome(options=opts)\n",
-    "    driver = webdriver.Chrome(PATH)\n",
+    "    driver = webdriver.Chrome(PATH, options=opts)\n",
     "    driver.implicitly_wait(implicit_wait)\n",
     "    return driver"
    ]
